[gd_scene load_steps=11 format=3 uid="uid://dd8ikwg8yprw3"]

[ext_resource type="Script" uid="uid://b644a5setmi0s" path="res://scene/character/npc/npc.gd" id="1_xxcha"]
[ext_resource type="Texture2D" uid="uid://bxs23toc2v1uk" path="res://ART/Sprites/NPC/Npc1/sprite_0.png" id="2_d61ma"]
[ext_resource type="PackedScene" uid="uid://c6fjnqiacddbx" path="res://scene/dialogue/dialogue.tscn" id="3_kh24r"]
[ext_resource type="Texture2D" uid="uid://cq5aa1khg7non" path="res://ART/Sprites/NPC/Npc1/sprite_1.png" id="3_slxoh"]
[ext_resource type="Texture2D" uid="uid://d4cnn5nl18mc1" path="res://ART/Sprites/NPC/Npc1/sprite_2.png" id="4_l64hl"]
[ext_resource type="Texture2D" uid="uid://b8afgf774jdii" path="res://ART/Sprites/NPC/Npc1/sprite_3.png" id="5_215dd"]
[ext_resource type="Texture2D" uid="uid://gm2yphsynhv7" path="res://ART/Sprites/NPC/Npc1/sprite_4.png" id="6_p5bpe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ul7y6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_d61ma")
}, {
"duration": 1.0,
"texture": ExtResource("3_slxoh")
}, {
"duration": 1.0,
"texture": ExtResource("4_l64hl")
}, {
"duration": 1.0,
"texture": ExtResource("5_215dd")
}, {
"duration": 1.0,
"texture": ExtResource("6_p5bpe")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bc6q4"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mcvl2"]
radius = 47.042534

[node name="Npc" type="CharacterBody2D"]
position = Vector2(129, 31)
script = ExtResource("1_xxcha")
Gtan = "res://dialogue/Gravekeeper_dialogue.json"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.6250019, -1.25)
scale = Vector2(1, 0.891)
sprite_frames = SubResource("SpriteFrames_ul7y6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.6293945e-06, 0)
shape = SubResource("CircleShape2D_bc6q4")

[node name="ChatDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChatDetection"]
shape = SubResource("CircleShape2D_mcvl2")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="dialogue" parent="." instance=ExtResource("3_kh24r")]
offset_left = -60.0
offset_top = -91.0
offset_right = 62.0
offset_bottom = -44.0
metadata/_edit_use_anchors_ = true

[connection signal="dialogue_exited" from="." to="dialogue" method="_on_npc_dialogue_exited"]
[connection signal="area_entered" from="ChatDetection" to="." method="_on_chat_detection_area_entered"]
[connection signal="area_exited" from="ChatDetection" to="." method="_on_chat_detection_area_exited"]
[connection signal="body_entered" from="ChatDetection" to="." method="_on_chat_detection_body_entered"]
[connection signal="body_exited" from="ChatDetection" to="." method="_on_chat_detection_body_exited"]
[connection signal="mouse_shape_entered" from="ChatDetection" to="." method="_on_chat_detection_mouse_shape_entered"]
[connection signal="mouse_shape_exited" from="ChatDetection" to="." method="_on_chat_detection_mouse_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="dialogue_finished" from="dialogue" to="." method="_on_dialogue_dialogue_finished"]
